// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sendEmail English changed_group_member_role template 1`] = `
{
  "attachments": [],
  "from": "ocelot.social",
  "html": "<!DOCTYPE html>
<html lang="en">
  <head>
    <meta content="multipart/html; charset=UTF-8" http-equiv="content-type">
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <style>.wf-force-outline-none[tabindex="-1"]:focus{outline:none;}</style>
    <style>body{
  display: block;
  font-family: Lato, sans-serif;
  font-size: 17px;
  text-align: left;
  text-align: -webkit-left;
  justify-content: center;
  padding: 15px;
  margin: 0px;
}

h2 {
  margin-top: 25px;
  font-size: 25px;
  font-weight: normal;
  line-height: 22px;
  color: #333333;
}

.container {
  max-width: 680px;
  margin: 0 auto;
  display: block;
}

.head-logo {
  width: 60%;
  height: auto;
  display: block;
  margin-left: auto;
  margin-right: auto;
}

a {
  color: #17b53e;
}

a.button {
  background: #17b53e;
  font-family: Lato, sans-serif;
  font-size: 16px;
  line-height: 15px;
  text-decoration: none;
  text-align:center;
  padding: 13px 17px;
  color: #ffffff;
  display: table;
  margin-left: auto;
  margin-right: auto;
  border-radius: 4px;
}

.text-block {
  margin-top: 20px;
  color: #000000;
}

footer {
  padding: 20px;
  font-family: Lato, sans-serif;
  font-size: 12px;
  line-height: 15px;
  text-align: center;
  color: #888888;
}

    </style>
  </head>
  <body>
    <div class="container">
      <header>
        <div class="head"><img class="head-logo" alt="Welcome Image" loading="lazy" src="http://webapp:3000/img/custom/logo-squared.svg">
        </div>
      </header>
      <h2>Hello Jenny Rostock,</h2>
      <div class="wrapper">
        <div class="content"></div>
        <p>your role in the group “The Group” has been changed. Click on this button to view this group:</p><a class="button" href="http://webapp:3000/group/g1/the-group">View group</a>
        <div class="text-block">
          <p>See you soon on <a class="organization" href="https://ocelot.social">ocelot.social</a>!</p>
          <p>– The ocelot.social Team</p><br>
          <p>PS: If you don't want to receive e-mails anymore, change your <a class="settings" href="http://webapp:3000/settings/notifications">notification settings</a>!</p>
        </div>
      </div>
      <footer>
        <div class="footer"></div><a href="https://ocelot.social">ocelot.social Community</a>
      </footer>
    </div>
  </body>
</html>",
  "subject": "ocelot.social  – Notification: Role in group changed",
  "text": "HELLO JENNY ROSTOCK,

your role in the group “The Group” has been changed. Click on this button to
view this group:

View group [http://webapp:3000/group/g1/the-group]

See you soon on ocelot.social [https://ocelot.social]!

– The ocelot.social Team


PS: If you don't want to receive e-mails anymore, change your notification
settings [http://webapp:3000/settings/notifications]!


ocelot.social Community [https://ocelot.social]",
  "to": "user@example.org",
}
`;

exports[`sendEmail English commented_on_post template 1`] = `
{
  "attachments": [],
  "from": "ocelot.social",
  "html": "<!DOCTYPE html>
<html lang="en">
  <head>
    <meta content="multipart/html; charset=UTF-8" http-equiv="content-type">
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <style>.wf-force-outline-none[tabindex="-1"]:focus{outline:none;}</style>
    <style>body{
  display: block;
  font-family: Lato, sans-serif;
  font-size: 17px;
  text-align: left;
  text-align: -webkit-left;
  justify-content: center;
  padding: 15px;
  margin: 0px;
}

h2 {
  margin-top: 25px;
  font-size: 25px;
  font-weight: normal;
  line-height: 22px;
  color: #333333;
}

.container {
  max-width: 680px;
  margin: 0 auto;
  display: block;
}

.head-logo {
  width: 60%;
  height: auto;
  display: block;
  margin-left: auto;
  margin-right: auto;
}

a {
  color: #17b53e;
}

a.button {
  background: #17b53e;
  font-family: Lato, sans-serif;
  font-size: 16px;
  line-height: 15px;
  text-decoration: none;
  text-align:center;
  padding: 13px 17px;
  color: #ffffff;
  display: table;
  margin-left: auto;
  margin-right: auto;
  border-radius: 4px;
}

.text-block {
  margin-top: 20px;
  color: #000000;
}

footer {
  padding: 20px;
  font-family: Lato, sans-serif;
  font-size: 12px;
  line-height: 15px;
  text-align: center;
  color: #888888;
}

    </style>
  </head>
  <body>
    <div class="container">
      <header>
        <div class="head"><img class="head-logo" alt="Welcome Image" loading="lazy" src="http://webapp:3000/img/custom/logo-squared.svg">
        </div>
      </header>
      <h2>Hello Jenny Rostock,</h2>
      <div class="wrapper">
        <div class="content"></div>
        <p><a class="user" href="http://webapp:3000/user/u2/peter-lustig">Peter Lustig</a> commented on a post that you are observing with the title “New Post”. Click on this button to view this comment:
        </p><a class="button" href="http://webapp:3000/post/p1/new-post#commentId-c1">View comment</a>
        <div class="text-block">
          <p>See you soon on <a class="organization" href="https://ocelot.social">ocelot.social</a>!</p>
          <p>– The ocelot.social Team</p><br>
          <p>PS: If you don't want to receive e-mails anymore, change your <a class="settings" href="http://webapp:3000/settings/notifications">notification settings</a>!</p>
        </div>
      </div>
      <footer>
        <div class="footer"></div><a href="https://ocelot.social">ocelot.social Community</a>
      </footer>
    </div>
  </body>
</html>",
  "subject": "ocelot.social  – Notification: New comment on post",
  "text": "HELLO JENNY ROSTOCK,

Peter Lustig [http://webapp:3000/user/u2/peter-lustig] commented on a post that
you are observing with the title “New Post”. Click on this button to view this
comment:

View comment [http://webapp:3000/post/p1/new-post#commentId-c1]

See you soon on ocelot.social [https://ocelot.social]!

– The ocelot.social Team


PS: If you don't want to receive e-mails anymore, change your notification
settings [http://webapp:3000/settings/notifications]!


ocelot.social Community [https://ocelot.social]",
  "to": "user@example.org",
}
`;

exports[`sendEmail English followed_user_posted template 1`] = `
{
  "attachments": [],
  "from": "ocelot.social",
  "html": "<!DOCTYPE html>
<html lang="en">
  <head>
    <meta content="multipart/html; charset=UTF-8" http-equiv="content-type">
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <style>.wf-force-outline-none[tabindex="-1"]:focus{outline:none;}</style>
    <style>body{
  display: block;
  font-family: Lato, sans-serif;
  font-size: 17px;
  text-align: left;
  text-align: -webkit-left;
  justify-content: center;
  padding: 15px;
  margin: 0px;
}

h2 {
  margin-top: 25px;
  font-size: 25px;
  font-weight: normal;
  line-height: 22px;
  color: #333333;
}

.container {
  max-width: 680px;
  margin: 0 auto;
  display: block;
}

.head-logo {
  width: 60%;
  height: auto;
  display: block;
  margin-left: auto;
  margin-right: auto;
}

a {
  color: #17b53e;
}

a.button {
  background: #17b53e;
  font-family: Lato, sans-serif;
  font-size: 16px;
  line-height: 15px;
  text-decoration: none;
  text-align:center;
  padding: 13px 17px;
  color: #ffffff;
  display: table;
  margin-left: auto;
  margin-right: auto;
  border-radius: 4px;
}

.text-block {
  margin-top: 20px;
  color: #000000;
}

footer {
  padding: 20px;
  font-family: Lato, sans-serif;
  font-size: 12px;
  line-height: 15px;
  text-align: center;
  color: #888888;
}

    </style>
  </head>
  <body>
    <div class="container">
      <header>
        <div class="head"><img class="head-logo" alt="Welcome Image" loading="lazy" src="http://webapp:3000/img/custom/logo-squared.svg">
        </div>
      </header>
      <h2>Hello Jenny Rostock,</h2>
      <div class="wrapper">
        <div class="content"></div>
        <p><a class="user" href="http://webapp:3000/user/u2/peter-lustig">Peter Lustig</a>, a user you are following, wrote a new post with the title “New Post”. Click on this button to view this post:
        </p><a class="button" href="http://webapp:3000/post/p1/new-post">View post</a>
        <div class="text-block">
          <p>See you soon on <a class="organization" href="https://ocelot.social">ocelot.social</a>!</p>
          <p>– The ocelot.social Team</p><br>
          <p>PS: If you don't want to receive e-mails anymore, change your <a class="settings" href="http://webapp:3000/settings/notifications">notification settings</a>!</p>
        </div>
      </div>
      <footer>
        <div class="footer"></div><a href="https://ocelot.social">ocelot.social Community</a>
      </footer>
    </div>
  </body>
</html>",
  "subject": "ocelot.social  – Notification: New post by followd user",
  "text": "HELLO JENNY ROSTOCK,

Peter Lustig [http://webapp:3000/user/u2/peter-lustig], a user you are
following, wrote a new post with the title “New Post”. Click on this button to
view this post:

View post [http://webapp:3000/post/p1/new-post]

See you soon on ocelot.social [https://ocelot.social]!

– The ocelot.social Team


PS: If you don't want to receive e-mails anymore, change your notification
settings [http://webapp:3000/settings/notifications]!


ocelot.social Community [https://ocelot.social]",
  "to": "user@example.org",
}
`;

exports[`sendEmail English mentioned_in_comment template 1`] = `
{
  "attachments": [],
  "from": "ocelot.social",
  "html": "<!DOCTYPE html>
<html lang="en">
  <head>
    <meta content="multipart/html; charset=UTF-8" http-equiv="content-type">
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <style>.wf-force-outline-none[tabindex="-1"]:focus{outline:none;}</style>
    <style>body{
  display: block;
  font-family: Lato, sans-serif;
  font-size: 17px;
  text-align: left;
  text-align: -webkit-left;
  justify-content: center;
  padding: 15px;
  margin: 0px;
}

h2 {
  margin-top: 25px;
  font-size: 25px;
  font-weight: normal;
  line-height: 22px;
  color: #333333;
}

.container {
  max-width: 680px;
  margin: 0 auto;
  display: block;
}

.head-logo {
  width: 60%;
  height: auto;
  display: block;
  margin-left: auto;
  margin-right: auto;
}

a {
  color: #17b53e;
}

a.button {
  background: #17b53e;
  font-family: Lato, sans-serif;
  font-size: 16px;
  line-height: 15px;
  text-decoration: none;
  text-align:center;
  padding: 13px 17px;
  color: #ffffff;
  display: table;
  margin-left: auto;
  margin-right: auto;
  border-radius: 4px;
}

.text-block {
  margin-top: 20px;
  color: #000000;
}

footer {
  padding: 20px;
  font-family: Lato, sans-serif;
  font-size: 12px;
  line-height: 15px;
  text-align: center;
  color: #888888;
}

    </style>
  </head>
  <body>
    <div class="container">
      <header>
        <div class="head"><img class="head-logo" alt="Welcome Image" loading="lazy" src="http://webapp:3000/img/custom/logo-squared.svg">
        </div>
      </header>
      <h2>Hello Jenny Rostock,</h2>
      <div class="wrapper">
        <div class="content"></div>
        <p><a class="user" href="http://webapp:3000/user/u2/peter-lustig">Peter Lustig</a> mentioned you in a comment to the post with the title “New Post”. Click on this button to view this comment:
        </p><a class="button" href="http://webapp:3000/post/p1/new-post#commentId-c1">View comment</a>
        <div class="text-block">
          <p>See you soon on <a class="organization" href="https://ocelot.social">ocelot.social</a>!</p>
          <p>– The ocelot.social Team</p><br>
          <p>PS: If you don't want to receive e-mails anymore, change your <a class="settings" href="http://webapp:3000/settings/notifications">notification settings</a>!</p>
        </div>
      </div>
      <footer>
        <div class="footer"></div><a href="https://ocelot.social">ocelot.social Community</a>
      </footer>
    </div>
  </body>
</html>",
  "subject": "ocelot.social  – Notification: Mentioned in comment",
  "text": "HELLO JENNY ROSTOCK,

Peter Lustig [http://webapp:3000/user/u2/peter-lustig] mentioned you in a
comment to the post with the title “New Post”. Click on this button to view this
comment:

View comment [http://webapp:3000/post/p1/new-post#commentId-c1]

See you soon on ocelot.social [https://ocelot.social]!

– The ocelot.social Team


PS: If you don't want to receive e-mails anymore, change your notification
settings [http://webapp:3000/settings/notifications]!


ocelot.social Community [https://ocelot.social]",
  "to": "user@example.org",
}
`;

exports[`sendEmail English mentioned_in_post template 1`] = `
{
  "attachments": [],
  "from": "ocelot.social",
  "html": "<!DOCTYPE html>
<html lang="en">
  <head>
    <meta content="multipart/html; charset=UTF-8" http-equiv="content-type">
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <style>.wf-force-outline-none[tabindex="-1"]:focus{outline:none;}</style>
    <style>body{
  display: block;
  font-family: Lato, sans-serif;
  font-size: 17px;
  text-align: left;
  text-align: -webkit-left;
  justify-content: center;
  padding: 15px;
  margin: 0px;
}

h2 {
  margin-top: 25px;
  font-size: 25px;
  font-weight: normal;
  line-height: 22px;
  color: #333333;
}

.container {
  max-width: 680px;
  margin: 0 auto;
  display: block;
}

.head-logo {
  width: 60%;
  height: auto;
  display: block;
  margin-left: auto;
  margin-right: auto;
}

a {
  color: #17b53e;
}

a.button {
  background: #17b53e;
  font-family: Lato, sans-serif;
  font-size: 16px;
  line-height: 15px;
  text-decoration: none;
  text-align:center;
  padding: 13px 17px;
  color: #ffffff;
  display: table;
  margin-left: auto;
  margin-right: auto;
  border-radius: 4px;
}

.text-block {
  margin-top: 20px;
  color: #000000;
}

footer {
  padding: 20px;
  font-family: Lato, sans-serif;
  font-size: 12px;
  line-height: 15px;
  text-align: center;
  color: #888888;
}

    </style>
  </head>
  <body>
    <div class="container">
      <header>
        <div class="head"><img class="head-logo" alt="Welcome Image" loading="lazy" src="http://webapp:3000/img/custom/logo-squared.svg">
        </div>
      </header>
      <h2>Hello Jenny Rostock,</h2>
      <div class="wrapper">
        <div class="content"></div>
        <p><a class="user" href="http://webapp:3000/user/u2/peter-lustig">Peter Lustig</a> mentioned you in a post with the title “New Post”. Click on this button to view this post:
        </p><a class="button" href="http://webapp:3000/post/p1/new-post">View post</a>
        <div class="text-block">
          <p>See you soon on <a class="organization" href="https://ocelot.social">ocelot.social</a>!</p>
          <p>– The ocelot.social Team</p><br>
          <p>PS: If you don't want to receive e-mails anymore, change your <a class="settings" href="http://webapp:3000/settings/notifications">notification settings</a>!</p>
        </div>
      </div>
      <footer>
        <div class="footer"></div><a href="https://ocelot.social">ocelot.social Community</a>
      </footer>
    </div>
  </body>
</html>",
  "subject": "ocelot.social  – Notification: Mentioned in post",
  "text": "HELLO JENNY ROSTOCK,

Peter Lustig [http://webapp:3000/user/u2/peter-lustig] mentioned you in a post
with the title “New Post”. Click on this button to view this post:

View post [http://webapp:3000/post/p1/new-post]

See you soon on ocelot.social [https://ocelot.social]!

– The ocelot.social Team


PS: If you don't want to receive e-mails anymore, change your notification
settings [http://webapp:3000/settings/notifications]!


ocelot.social Community [https://ocelot.social]",
  "to": "user@example.org",
}
`;

exports[`sendEmail English post_in_group template 1`] = `
{
  "attachments": [],
  "from": "ocelot.social",
  "html": "<!DOCTYPE html>
<html lang="en">
  <head>
    <meta content="multipart/html; charset=UTF-8" http-equiv="content-type">
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <style>.wf-force-outline-none[tabindex="-1"]:focus{outline:none;}</style>
    <style>body{
  display: block;
  font-family: Lato, sans-serif;
  font-size: 17px;
  text-align: left;
  text-align: -webkit-left;
  justify-content: center;
  padding: 15px;
  margin: 0px;
}

h2 {
  margin-top: 25px;
  font-size: 25px;
  font-weight: normal;
  line-height: 22px;
  color: #333333;
}

.container {
  max-width: 680px;
  margin: 0 auto;
  display: block;
}

.head-logo {
  width: 60%;
  height: auto;
  display: block;
  margin-left: auto;
  margin-right: auto;
}

a {
  color: #17b53e;
}

a.button {
  background: #17b53e;
  font-family: Lato, sans-serif;
  font-size: 16px;
  line-height: 15px;
  text-decoration: none;
  text-align:center;
  padding: 13px 17px;
  color: #ffffff;
  display: table;
  margin-left: auto;
  margin-right: auto;
  border-radius: 4px;
}

.text-block {
  margin-top: 20px;
  color: #000000;
}

footer {
  padding: 20px;
  font-family: Lato, sans-serif;
  font-size: 12px;
  line-height: 15px;
  text-align: center;
  color: #888888;
}

    </style>
  </head>
  <body>
    <div class="container">
      <header>
        <div class="head"><img class="head-logo" alt="Welcome Image" loading="lazy" src="http://webapp:3000/img/custom/logo-squared.svg">
        </div>
      </header>
      <h2>Hello Jenny Rostock,</h2>
      <div class="wrapper">
        <div class="content"></div>
        <p>someone wrote a new post with the title “New Post” in one of your groups. Click on this button to view this post:</p><a class="button" href="http://webapp:3000/post/p1/new-post">View post</a>
        <div class="text-block">
          <p>See you soon on <a class="organization" href="https://ocelot.social">ocelot.social</a>!</p>
          <p>– The ocelot.social Team</p><br>
          <p>PS: If you don't want to receive e-mails anymore, change your <a class="settings" href="http://webapp:3000/settings/notifications">notification settings</a>!</p>
        </div>
      </div>
      <footer>
        <div class="footer"></div><a href="https://ocelot.social">ocelot.social Community</a>
      </footer>
    </div>
  </body>
</html>",
  "subject": "ocelot.social  – Notification: New post in group",
  "text": "HELLO JENNY ROSTOCK,

someone wrote a new post with the title “New Post” in one of your groups. Click
on this button to view this post:

View post [http://webapp:3000/post/p1/new-post]

See you soon on ocelot.social [https://ocelot.social]!

– The ocelot.social Team


PS: If you don't want to receive e-mails anymore, change your notification
settings [http://webapp:3000/settings/notifications]!


ocelot.social Community [https://ocelot.social]",
  "to": "user@example.org",
}
`;

exports[`sendEmail English removed_user_from_group template 1`] = `
{
  "attachments": [],
  "from": "ocelot.social",
  "html": "<!DOCTYPE html>
<html lang="en">
  <head>
    <meta content="multipart/html; charset=UTF-8" http-equiv="content-type">
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <style>.wf-force-outline-none[tabindex="-1"]:focus{outline:none;}</style>
    <style>body{
  display: block;
  font-family: Lato, sans-serif;
  font-size: 17px;
  text-align: left;
  text-align: -webkit-left;
  justify-content: center;
  padding: 15px;
  margin: 0px;
}

h2 {
  margin-top: 25px;
  font-size: 25px;
  font-weight: normal;
  line-height: 22px;
  color: #333333;
}

.container {
  max-width: 680px;
  margin: 0 auto;
  display: block;
}

.head-logo {
  width: 60%;
  height: auto;
  display: block;
  margin-left: auto;
  margin-right: auto;
}

a {
  color: #17b53e;
}

a.button {
  background: #17b53e;
  font-family: Lato, sans-serif;
  font-size: 16px;
  line-height: 15px;
  text-decoration: none;
  text-align:center;
  padding: 13px 17px;
  color: #ffffff;
  display: table;
  margin-left: auto;
  margin-right: auto;
  border-radius: 4px;
}

.text-block {
  margin-top: 20px;
  color: #000000;
}

footer {
  padding: 20px;
  font-family: Lato, sans-serif;
  font-size: 12px;
  line-height: 15px;
  text-align: center;
  color: #888888;
}

    </style>
  </head>
  <body>
    <div class="container">
      <header>
        <div class="head"><img class="head-logo" alt="Welcome Image" loading="lazy" src="http://webapp:3000/img/custom/logo-squared.svg">
        </div>
      </header>
      <h2>Hello Jenny Rostock,</h2>
      <div class="wrapper">
        <div class="content"></div>
        <p>you have been removed from the group “The Group”.</p>
        <div class="text-block">
          <p>See you soon on <a class="organization" href="https://ocelot.social">ocelot.social</a>!</p>
          <p>– The ocelot.social Team</p><br>
          <p>PS: If you don't want to receive e-mails anymore, change your <a class="settings" href="http://webapp:3000/settings/notifications">notification settings</a>!</p>
        </div>
      </div>
      <footer>
        <div class="footer"></div><a href="https://ocelot.social">ocelot.social Community</a>
      </footer>
    </div>
  </body>
</html>",
  "subject": "ocelot.social  – Notification: Removed from group",
  "text": "HELLO JENNY ROSTOCK,

you have been removed from the group “The Group”.

See you soon on ocelot.social [https://ocelot.social]!

– The ocelot.social Team


PS: If you don't want to receive e-mails anymore, change your notification
settings [http://webapp:3000/settings/notifications]!


ocelot.social Community [https://ocelot.social]",
  "to": "user@example.org",
}
`;

exports[`sendEmail English user_joined_group template 1`] = `
{
  "attachments": [],
  "from": "ocelot.social",
  "html": "<!DOCTYPE html>
<html lang="en">
  <head>
    <meta content="multipart/html; charset=UTF-8" http-equiv="content-type">
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <style>.wf-force-outline-none[tabindex="-1"]:focus{outline:none;}</style>
    <style>body{
  display: block;
  font-family: Lato, sans-serif;
  font-size: 17px;
  text-align: left;
  text-align: -webkit-left;
  justify-content: center;
  padding: 15px;
  margin: 0px;
}

h2 {
  margin-top: 25px;
  font-size: 25px;
  font-weight: normal;
  line-height: 22px;
  color: #333333;
}

.container {
  max-width: 680px;
  margin: 0 auto;
  display: block;
}

.head-logo {
  width: 60%;
  height: auto;
  display: block;
  margin-left: auto;
  margin-right: auto;
}

a {
  color: #17b53e;
}

a.button {
  background: #17b53e;
  font-family: Lato, sans-serif;
  font-size: 16px;
  line-height: 15px;
  text-decoration: none;
  text-align:center;
  padding: 13px 17px;
  color: #ffffff;
  display: table;
  margin-left: auto;
  margin-right: auto;
  border-radius: 4px;
}

.text-block {
  margin-top: 20px;
  color: #000000;
}

footer {
  padding: 20px;
  font-family: Lato, sans-serif;
  font-size: 12px;
  line-height: 15px;
  text-align: center;
  color: #888888;
}

    </style>
  </head>
  <body>
    <div class="container">
      <header>
        <div class="head"><img class="head-logo" alt="Welcome Image" loading="lazy" src="http://webapp:3000/img/custom/logo-squared.svg">
        </div>
      </header>
      <h2>Hello Jenny Rostock,</h2>
      <div class="wrapper">
        <div class="content"></div>
        <p><a class="user" href="http://webapp:3000/user/u2/peter-lustig">Peter Lustig</a> joined the group “The Group”. Click on this button to view this group:
        </p><a class="button" href="http://webapp:3000/group/g1/the-group">View group</a>
        <div class="text-block">
          <p>See you soon on <a class="organization" href="https://ocelot.social">ocelot.social</a>!</p>
          <p>– The ocelot.social Team</p><br>
          <p>PS: If you don't want to receive e-mails anymore, change your <a class="settings" href="http://webapp:3000/settings/notifications">notification settings</a>!</p>
        </div>
      </div>
      <footer>
        <div class="footer"></div><a href="https://ocelot.social">ocelot.social Community</a>
      </footer>
    </div>
  </body>
</html>",
  "subject": "ocelot.social  – Notification: User joined group",
  "text": "HELLO JENNY ROSTOCK,

Peter Lustig [http://webapp:3000/user/u2/peter-lustig] joined the group “The
Group”. Click on this button to view this group:

View group [http://webapp:3000/group/g1/the-group]

See you soon on ocelot.social [https://ocelot.social]!

– The ocelot.social Team


PS: If you don't want to receive e-mails anymore, change your notification
settings [http://webapp:3000/settings/notifications]!


ocelot.social Community [https://ocelot.social]",
  "to": "user@example.org",
}
`;

exports[`sendEmail English user_left_group template 1`] = `
{
  "attachments": [],
  "from": "ocelot.social",
  "html": "<!DOCTYPE html>
<html lang="en">
  <head>
    <meta content="multipart/html; charset=UTF-8" http-equiv="content-type">
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <style>.wf-force-outline-none[tabindex="-1"]:focus{outline:none;}</style>
    <style>body{
  display: block;
  font-family: Lato, sans-serif;
  font-size: 17px;
  text-align: left;
  text-align: -webkit-left;
  justify-content: center;
  padding: 15px;
  margin: 0px;
}

h2 {
  margin-top: 25px;
  font-size: 25px;
  font-weight: normal;
  line-height: 22px;
  color: #333333;
}

.container {
  max-width: 680px;
  margin: 0 auto;
  display: block;
}

.head-logo {
  width: 60%;
  height: auto;
  display: block;
  margin-left: auto;
  margin-right: auto;
}

a {
  color: #17b53e;
}

a.button {
  background: #17b53e;
  font-family: Lato, sans-serif;
  font-size: 16px;
  line-height: 15px;
  text-decoration: none;
  text-align:center;
  padding: 13px 17px;
  color: #ffffff;
  display: table;
  margin-left: auto;
  margin-right: auto;
  border-radius: 4px;
}

.text-block {
  margin-top: 20px;
  color: #000000;
}

footer {
  padding: 20px;
  font-family: Lato, sans-serif;
  font-size: 12px;
  line-height: 15px;
  text-align: center;
  color: #888888;
}

    </style>
  </head>
  <body>
    <div class="container">
      <header>
        <div class="head"><img class="head-logo" alt="Welcome Image" loading="lazy" src="http://webapp:3000/img/custom/logo-squared.svg">
        </div>
      </header>
      <h2>Hello Jenny Rostock,</h2>
      <div class="wrapper">
        <div class="content"></div>
        <p><a class="user" href="http://webapp:3000/user/u2/peter-lustig">Peter Lustig</a> left the group “The Group”. Click on this button to view this group:
        </p><a class="button" href="http://webapp:3000/group/g1/the-group">View group</a>
        <div class="text-block">
          <p>See you soon on <a class="organization" href="https://ocelot.social">ocelot.social</a>!</p>
          <p>– The ocelot.social Team</p><br>
          <p>PS: If you don't want to receive e-mails anymore, change your <a class="settings" href="http://webapp:3000/settings/notifications">notification settings</a>!</p>
        </div>
      </div>
      <footer>
        <div class="footer"></div><a href="https://ocelot.social">ocelot.social Community</a>
      </footer>
    </div>
  </body>
</html>",
  "subject": "ocelot.social  – Notification: User left group",
  "text": "HELLO JENNY ROSTOCK,

Peter Lustig [http://webapp:3000/user/u2/peter-lustig] left the group “The
Group”. Click on this button to view this group:

View group [http://webapp:3000/group/g1/the-group]

See you soon on ocelot.social [https://ocelot.social]!

– The ocelot.social Team


PS: If you don't want to receive e-mails anymore, change your notification
settings [http://webapp:3000/settings/notifications]!


ocelot.social Community [https://ocelot.social]",
  "to": "user@example.org",
}
`;

exports[`sendEmail German changed_group_member_role template 1`] = `
{
  "attachments": [],
  "from": "ocelot.social",
  "html": "<!DOCTYPE html>
<html lang="de">
  <head>
    <meta content="multipart/html; charset=UTF-8" http-equiv="content-type">
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <style>.wf-force-outline-none[tabindex="-1"]:focus{outline:none;}</style>
    <style>body{
  display: block;
  font-family: Lato, sans-serif;
  font-size: 17px;
  text-align: left;
  text-align: -webkit-left;
  justify-content: center;
  padding: 15px;
  margin: 0px;
}

h2 {
  margin-top: 25px;
  font-size: 25px;
  font-weight: normal;
  line-height: 22px;
  color: #333333;
}

.container {
  max-width: 680px;
  margin: 0 auto;
  display: block;
}

.head-logo {
  width: 60%;
  height: auto;
  display: block;
  margin-left: auto;
  margin-right: auto;
}

a {
  color: #17b53e;
}

a.button {
  background: #17b53e;
  font-family: Lato, sans-serif;
  font-size: 16px;
  line-height: 15px;
  text-decoration: none;
  text-align:center;
  padding: 13px 17px;
  color: #ffffff;
  display: table;
  margin-left: auto;
  margin-right: auto;
  border-radius: 4px;
}

.text-block {
  margin-top: 20px;
  color: #000000;
}

footer {
  padding: 20px;
  font-family: Lato, sans-serif;
  font-size: 12px;
  line-height: 15px;
  text-align: center;
  color: #888888;
}

    </style>
  </head>
  <body>
    <div class="container">
      <header>
        <div class="head"><img class="head-logo" alt="Welcome Image" loading="lazy" src="http://webapp:3000/img/custom/logo-squared.svg">
        </div>
      </header>
      <h2>Hallo Jenny Rostock,</h2>
      <div class="wrapper">
        <div class="content"></div>
        <p>deine Rolle in der Gruppe  „The Group“ wurde geändert. Klicke auf diesen Knopf, um diese Gruppe zu sehen:</p><a class="button" href="http://webapp:3000/group/g1/the-group">Gruppe ansehen</a>
        <div class="text-block">
          <p>Bis bald bei <a class="organization" href="https://ocelot.social">ocelot.social</a>!</p>
          <p>– Dein ocelot.social Team</p><br>
          <p>PS: Möchtest du keine E-Mails mehr erhalten, dann ändere deine <a class="settings" href="http://webapp:3000/settings/notifications">Benachrichtigungseinstellungen</a>!</p>
        </div>
      </div>
      <footer>
        <div class="footer"></div><a href="https://ocelot.social">ocelot.social Community</a>
      </footer>
    </div>
  </body>
</html>",
  "subject": "ocelot.social  – Benachrichtigung: Rolle in Gruppe geändert",
  "text": "HALLO JENNY ROSTOCK,

deine Rolle in der Gruppe „The Group“ wurde geändert. Klicke auf diesen Knopf,
um diese Gruppe zu sehen:

Gruppe ansehen [http://webapp:3000/group/g1/the-group]

Bis bald bei ocelot.social [https://ocelot.social]!

– Dein ocelot.social Team


PS: Möchtest du keine E-Mails mehr erhalten, dann ändere deine
Benachrichtigungseinstellungen [http://webapp:3000/settings/notifications]!


ocelot.social Community [https://ocelot.social]",
  "to": "user@example.org",
}
`;

exports[`sendEmail German commented_on_post template 1`] = `
{
  "attachments": [],
  "from": "ocelot.social",
  "html": "<!DOCTYPE html>
<html lang="de">
  <head>
    <meta content="multipart/html; charset=UTF-8" http-equiv="content-type">
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <style>.wf-force-outline-none[tabindex="-1"]:focus{outline:none;}</style>
    <style>body{
  display: block;
  font-family: Lato, sans-serif;
  font-size: 17px;
  text-align: left;
  text-align: -webkit-left;
  justify-content: center;
  padding: 15px;
  margin: 0px;
}

h2 {
  margin-top: 25px;
  font-size: 25px;
  font-weight: normal;
  line-height: 22px;
  color: #333333;
}

.container {
  max-width: 680px;
  margin: 0 auto;
  display: block;
}

.head-logo {
  width: 60%;
  height: auto;
  display: block;
  margin-left: auto;
  margin-right: auto;
}

a {
  color: #17b53e;
}

a.button {
  background: #17b53e;
  font-family: Lato, sans-serif;
  font-size: 16px;
  line-height: 15px;
  text-decoration: none;
  text-align:center;
  padding: 13px 17px;
  color: #ffffff;
  display: table;
  margin-left: auto;
  margin-right: auto;
  border-radius: 4px;
}

.text-block {
  margin-top: 20px;
  color: #000000;
}

footer {
  padding: 20px;
  font-family: Lato, sans-serif;
  font-size: 12px;
  line-height: 15px;
  text-align: center;
  color: #888888;
}

    </style>
  </head>
  <body>
    <div class="container">
      <header>
        <div class="head"><img class="head-logo" alt="Welcome Image" loading="lazy" src="http://webapp:3000/img/custom/logo-squared.svg">
        </div>
      </header>
      <h2>Hallo Jenny Rostock,</h2>
      <div class="wrapper">
        <div class="content"></div>
        <p><a class="user" href="http://webapp:3000/user/u2/peter-lustig">Peter Lustig</a> hat einen Beitrag den du beobachtest mit dem Titel „New Post“ kommentiert. Klicke auf diesen Knopf, um diesen Kommentar zu sehen:
        </p><a class="button" href="http://webapp:3000/post/p1/new-post#commentId-c1">Kommentar ansehen</a>
        <div class="text-block">
          <p>Bis bald bei <a class="organization" href="https://ocelot.social">ocelot.social</a>!</p>
          <p>– Dein ocelot.social Team</p><br>
          <p>PS: Möchtest du keine E-Mails mehr erhalten, dann ändere deine <a class="settings" href="http://webapp:3000/settings/notifications">Benachrichtigungseinstellungen</a>!</p>
        </div>
      </div>
      <footer>
        <div class="footer"></div><a href="https://ocelot.social">ocelot.social Community</a>
      </footer>
    </div>
  </body>
</html>",
  "subject": "ocelot.social  – Benachrichtigung: Neuer Kommentar zu Beitrag",
  "text": "HALLO JENNY ROSTOCK,

Peter Lustig [http://webapp:3000/user/u2/peter-lustig] hat einen Beitrag den du
beobachtest mit dem Titel „New Post“ kommentiert. Klicke auf diesen Knopf, um
diesen Kommentar zu sehen:

Kommentar ansehen [http://webapp:3000/post/p1/new-post#commentId-c1]

Bis bald bei ocelot.social [https://ocelot.social]!

– Dein ocelot.social Team


PS: Möchtest du keine E-Mails mehr erhalten, dann ändere deine
Benachrichtigungseinstellungen [http://webapp:3000/settings/notifications]!


ocelot.social Community [https://ocelot.social]",
  "to": "user@example.org",
}
`;

exports[`sendEmail German followed_user_posted template 1`] = `
{
  "attachments": [],
  "from": "ocelot.social",
  "html": "<!DOCTYPE html>
<html lang="de">
  <head>
    <meta content="multipart/html; charset=UTF-8" http-equiv="content-type">
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <style>.wf-force-outline-none[tabindex="-1"]:focus{outline:none;}</style>
    <style>body{
  display: block;
  font-family: Lato, sans-serif;
  font-size: 17px;
  text-align: left;
  text-align: -webkit-left;
  justify-content: center;
  padding: 15px;
  margin: 0px;
}

h2 {
  margin-top: 25px;
  font-size: 25px;
  font-weight: normal;
  line-height: 22px;
  color: #333333;
}

.container {
  max-width: 680px;
  margin: 0 auto;
  display: block;
}

.head-logo {
  width: 60%;
  height: auto;
  display: block;
  margin-left: auto;
  margin-right: auto;
}

a {
  color: #17b53e;
}

a.button {
  background: #17b53e;
  font-family: Lato, sans-serif;
  font-size: 16px;
  line-height: 15px;
  text-decoration: none;
  text-align:center;
  padding: 13px 17px;
  color: #ffffff;
  display: table;
  margin-left: auto;
  margin-right: auto;
  border-radius: 4px;
}

.text-block {
  margin-top: 20px;
  color: #000000;
}

footer {
  padding: 20px;
  font-family: Lato, sans-serif;
  font-size: 12px;
  line-height: 15px;
  text-align: center;
  color: #888888;
}

    </style>
  </head>
  <body>
    <div class="container">
      <header>
        <div class="head"><img class="head-logo" alt="Welcome Image" loading="lazy" src="http://webapp:3000/img/custom/logo-squared.svg">
        </div>
      </header>
      <h2>Hallo Jenny Rostock,</h2>
      <div class="wrapper">
        <div class="content"></div>
        <p><a class="user" href="http://webapp:3000/user/u2/peter-lustig">Peter Lustig</a>, ein Nutzer dem du folgst, hat einen neuen Beitrag mit dem Titel „New Post“ geschrieben. Klicke auf diesen Knopf, um diesen Beitrag zu sehen:
        </p><a class="button" href="http://webapp:3000/post/p1/new-post">Beitrag ansehen</a>
        <div class="text-block">
          <p>Bis bald bei <a class="organization" href="https://ocelot.social">ocelot.social</a>!</p>
          <p>– Dein ocelot.social Team</p><br>
          <p>PS: Möchtest du keine E-Mails mehr erhalten, dann ändere deine <a class="settings" href="http://webapp:3000/settings/notifications">Benachrichtigungseinstellungen</a>!</p>
        </div>
      </div>
      <footer>
        <div class="footer"></div><a href="https://ocelot.social">ocelot.social Community</a>
      </footer>
    </div>
  </body>
</html>",
  "subject": "ocelot.social  – Benachrichtigung: Neuer Beitrag von gefolgtem Nutzer",
  "text": "HALLO JENNY ROSTOCK,

Peter Lustig [http://webapp:3000/user/u2/peter-lustig], ein Nutzer dem du
folgst, hat einen neuen Beitrag mit dem Titel „New Post“ geschrieben. Klicke auf
diesen Knopf, um diesen Beitrag zu sehen:

Beitrag ansehen [http://webapp:3000/post/p1/new-post]

Bis bald bei ocelot.social [https://ocelot.social]!

– Dein ocelot.social Team


PS: Möchtest du keine E-Mails mehr erhalten, dann ändere deine
Benachrichtigungseinstellungen [http://webapp:3000/settings/notifications]!


ocelot.social Community [https://ocelot.social]",
  "to": "user@example.org",
}
`;

exports[`sendEmail German mentioned_in_comment template 1`] = `
{
  "attachments": [],
  "from": "ocelot.social",
  "html": "<!DOCTYPE html>
<html lang="de">
  <head>
    <meta content="multipart/html; charset=UTF-8" http-equiv="content-type">
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <style>.wf-force-outline-none[tabindex="-1"]:focus{outline:none;}</style>
    <style>body{
  display: block;
  font-family: Lato, sans-serif;
  font-size: 17px;
  text-align: left;
  text-align: -webkit-left;
  justify-content: center;
  padding: 15px;
  margin: 0px;
}

h2 {
  margin-top: 25px;
  font-size: 25px;
  font-weight: normal;
  line-height: 22px;
  color: #333333;
}

.container {
  max-width: 680px;
  margin: 0 auto;
  display: block;
}

.head-logo {
  width: 60%;
  height: auto;
  display: block;
  margin-left: auto;
  margin-right: auto;
}

a {
  color: #17b53e;
}

a.button {
  background: #17b53e;
  font-family: Lato, sans-serif;
  font-size: 16px;
  line-height: 15px;
  text-decoration: none;
  text-align:center;
  padding: 13px 17px;
  color: #ffffff;
  display: table;
  margin-left: auto;
  margin-right: auto;
  border-radius: 4px;
}

.text-block {
  margin-top: 20px;
  color: #000000;
}

footer {
  padding: 20px;
  font-family: Lato, sans-serif;
  font-size: 12px;
  line-height: 15px;
  text-align: center;
  color: #888888;
}

    </style>
  </head>
  <body>
    <div class="container">
      <header>
        <div class="head"><img class="head-logo" alt="Welcome Image" loading="lazy" src="http://webapp:3000/img/custom/logo-squared.svg">
        </div>
      </header>
      <h2>Hallo Jenny Rostock,</h2>
      <div class="wrapper">
        <div class="content"></div>
        <p><a class="user" href="http://webapp:3000/user/u2/peter-lustig">Peter Lustig</a> hat dich in einem Kommentar zu dem Beitrag mit dem Titel „New Post“ erwähnt. Klicke auf diesen Knopf, um diesen Kommentar zu sehen:
        </p><a class="button" href="http://webapp:3000/post/p1/new-post#commentId-c1">Kommentar ansehen</a>
        <div class="text-block">
          <p>Bis bald bei <a class="organization" href="https://ocelot.social">ocelot.social</a>!</p>
          <p>– Dein ocelot.social Team</p><br>
          <p>PS: Möchtest du keine E-Mails mehr erhalten, dann ändere deine <a class="settings" href="http://webapp:3000/settings/notifications">Benachrichtigungseinstellungen</a>!</p>
        </div>
      </div>
      <footer>
        <div class="footer"></div><a href="https://ocelot.social">ocelot.social Community</a>
      </footer>
    </div>
  </body>
</html>",
  "subject": "ocelot.social  – Benachrichtigung: Erwähnung in Kommentar",
  "text": "HALLO JENNY ROSTOCK,

Peter Lustig [http://webapp:3000/user/u2/peter-lustig] hat dich in einem
Kommentar zu dem Beitrag mit dem Titel „New Post“ erwähnt. Klicke auf diesen
Knopf, um diesen Kommentar zu sehen:

Kommentar ansehen [http://webapp:3000/post/p1/new-post#commentId-c1]

Bis bald bei ocelot.social [https://ocelot.social]!

– Dein ocelot.social Team


PS: Möchtest du keine E-Mails mehr erhalten, dann ändere deine
Benachrichtigungseinstellungen [http://webapp:3000/settings/notifications]!


ocelot.social Community [https://ocelot.social]",
  "to": "user@example.org",
}
`;

exports[`sendEmail German mentioned_in_post template 1`] = `
{
  "attachments": [],
  "from": "ocelot.social",
  "html": "<!DOCTYPE html>
<html lang="de">
  <head>
    <meta content="multipart/html; charset=UTF-8" http-equiv="content-type">
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <style>.wf-force-outline-none[tabindex="-1"]:focus{outline:none;}</style>
    <style>body{
  display: block;
  font-family: Lato, sans-serif;
  font-size: 17px;
  text-align: left;
  text-align: -webkit-left;
  justify-content: center;
  padding: 15px;
  margin: 0px;
}

h2 {
  margin-top: 25px;
  font-size: 25px;
  font-weight: normal;
  line-height: 22px;
  color: #333333;
}

.container {
  max-width: 680px;
  margin: 0 auto;
  display: block;
}

.head-logo {
  width: 60%;
  height: auto;
  display: block;
  margin-left: auto;
  margin-right: auto;
}

a {
  color: #17b53e;
}

a.button {
  background: #17b53e;
  font-family: Lato, sans-serif;
  font-size: 16px;
  line-height: 15px;
  text-decoration: none;
  text-align:center;
  padding: 13px 17px;
  color: #ffffff;
  display: table;
  margin-left: auto;
  margin-right: auto;
  border-radius: 4px;
}

.text-block {
  margin-top: 20px;
  color: #000000;
}

footer {
  padding: 20px;
  font-family: Lato, sans-serif;
  font-size: 12px;
  line-height: 15px;
  text-align: center;
  color: #888888;
}

    </style>
  </head>
  <body>
    <div class="container">
      <header>
        <div class="head"><img class="head-logo" alt="Welcome Image" loading="lazy" src="http://webapp:3000/img/custom/logo-squared.svg">
        </div>
      </header>
      <h2>Hallo Jenny Rostock,</h2>
      <div class="wrapper">
        <div class="content"></div>
        <p><a class="user" href="http://webapp:3000/user/u2/peter-lustig">Peter Lustig</a> hat Dich in einem Beitrag mit dem Titel „New Post“ erwähnt. Klicke auf diesen Knopf, um diesen Beitrag zu sehen:
        </p><a class="button" href="http://webapp:3000/post/p1/new-post">Beitrag ansehen</a>
        <div class="text-block">
          <p>Bis bald bei <a class="organization" href="https://ocelot.social">ocelot.social</a>!</p>
          <p>– Dein ocelot.social Team</p><br>
          <p>PS: Möchtest du keine E-Mails mehr erhalten, dann ändere deine <a class="settings" href="http://webapp:3000/settings/notifications">Benachrichtigungseinstellungen</a>!</p>
        </div>
      </div>
      <footer>
        <div class="footer"></div><a href="https://ocelot.social">ocelot.social Community</a>
      </footer>
    </div>
  </body>
</html>",
  "subject": "ocelot.social  – Benachrichtigung: Erwähnung in Beitrag",
  "text": "HALLO JENNY ROSTOCK,

Peter Lustig [http://webapp:3000/user/u2/peter-lustig] hat Dich in einem Beitrag
mit dem Titel „New Post“ erwähnt. Klicke auf diesen Knopf, um diesen Beitrag zu
sehen:

Beitrag ansehen [http://webapp:3000/post/p1/new-post]

Bis bald bei ocelot.social [https://ocelot.social]!

– Dein ocelot.social Team


PS: Möchtest du keine E-Mails mehr erhalten, dann ändere deine
Benachrichtigungseinstellungen [http://webapp:3000/settings/notifications]!


ocelot.social Community [https://ocelot.social]",
  "to": "user@example.org",
}
`;

exports[`sendEmail German post_in_group template 1`] = `
{
  "attachments": [],
  "from": "ocelot.social",
  "html": "<!DOCTYPE html>
<html lang="de">
  <head>
    <meta content="multipart/html; charset=UTF-8" http-equiv="content-type">
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <style>.wf-force-outline-none[tabindex="-1"]:focus{outline:none;}</style>
    <style>body{
  display: block;
  font-family: Lato, sans-serif;
  font-size: 17px;
  text-align: left;
  text-align: -webkit-left;
  justify-content: center;
  padding: 15px;
  margin: 0px;
}

h2 {
  margin-top: 25px;
  font-size: 25px;
  font-weight: normal;
  line-height: 22px;
  color: #333333;
}

.container {
  max-width: 680px;
  margin: 0 auto;
  display: block;
}

.head-logo {
  width: 60%;
  height: auto;
  display: block;
  margin-left: auto;
  margin-right: auto;
}

a {
  color: #17b53e;
}

a.button {
  background: #17b53e;
  font-family: Lato, sans-serif;
  font-size: 16px;
  line-height: 15px;
  text-decoration: none;
  text-align:center;
  padding: 13px 17px;
  color: #ffffff;
  display: table;
  margin-left: auto;
  margin-right: auto;
  border-radius: 4px;
}

.text-block {
  margin-top: 20px;
  color: #000000;
}

footer {
  padding: 20px;
  font-family: Lato, sans-serif;
  font-size: 12px;
  line-height: 15px;
  text-align: center;
  color: #888888;
}

    </style>
  </head>
  <body>
    <div class="container">
      <header>
        <div class="head"><img class="head-logo" alt="Welcome Image" loading="lazy" src="http://webapp:3000/img/custom/logo-squared.svg">
        </div>
      </header>
      <h2>Hallo Jenny Rostock,</h2>
      <div class="wrapper">
        <div class="content"></div>
        <p>jemand hat einen neuen Beitrag mit dem Titel „New Post“ in einer deiner Gruppen geschrieben. Klicke auf diesen Knopf, um diesen Beitrag zu sehen:</p><a class="button" href="http://webapp:3000/post/p1/new-post">Beitrag ansehen</a>
        <div class="text-block">
          <p>Bis bald bei <a class="organization" href="https://ocelot.social">ocelot.social</a>!</p>
          <p>– Dein ocelot.social Team</p><br>
          <p>PS: Möchtest du keine E-Mails mehr erhalten, dann ändere deine <a class="settings" href="http://webapp:3000/settings/notifications">Benachrichtigungseinstellungen</a>!</p>
        </div>
      </div>
      <footer>
        <div class="footer"></div><a href="https://ocelot.social">ocelot.social Community</a>
      </footer>
    </div>
  </body>
</html>",
  "subject": "ocelot.social  – Benachrichtigung: Neuer Beitrag in Gruppe",
  "text": "HALLO JENNY ROSTOCK,

jemand hat einen neuen Beitrag mit dem Titel „New Post“ in einer deiner Gruppen
geschrieben. Klicke auf diesen Knopf, um diesen Beitrag zu sehen:

Beitrag ansehen [http://webapp:3000/post/p1/new-post]

Bis bald bei ocelot.social [https://ocelot.social]!

– Dein ocelot.social Team


PS: Möchtest du keine E-Mails mehr erhalten, dann ändere deine
Benachrichtigungseinstellungen [http://webapp:3000/settings/notifications]!


ocelot.social Community [https://ocelot.social]",
  "to": "user@example.org",
}
`;

exports[`sendEmail German removed_user_from_group template 1`] = `
{
  "attachments": [],
  "from": "ocelot.social",
  "html": "<!DOCTYPE html>
<html lang="de">
  <head>
    <meta content="multipart/html; charset=UTF-8" http-equiv="content-type">
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <style>.wf-force-outline-none[tabindex="-1"]:focus{outline:none;}</style>
    <style>body{
  display: block;
  font-family: Lato, sans-serif;
  font-size: 17px;
  text-align: left;
  text-align: -webkit-left;
  justify-content: center;
  padding: 15px;
  margin: 0px;
}

h2 {
  margin-top: 25px;
  font-size: 25px;
  font-weight: normal;
  line-height: 22px;
  color: #333333;
}

.container {
  max-width: 680px;
  margin: 0 auto;
  display: block;
}

.head-logo {
  width: 60%;
  height: auto;
  display: block;
  margin-left: auto;
  margin-right: auto;
}

a {
  color: #17b53e;
}

a.button {
  background: #17b53e;
  font-family: Lato, sans-serif;
  font-size: 16px;
  line-height: 15px;
  text-decoration: none;
  text-align:center;
  padding: 13px 17px;
  color: #ffffff;
  display: table;
  margin-left: auto;
  margin-right: auto;
  border-radius: 4px;
}

.text-block {
  margin-top: 20px;
  color: #000000;
}

footer {
  padding: 20px;
  font-family: Lato, sans-serif;
  font-size: 12px;
  line-height: 15px;
  text-align: center;
  color: #888888;
}

    </style>
  </head>
  <body>
    <div class="container">
      <header>
        <div class="head"><img class="head-logo" alt="Welcome Image" loading="lazy" src="http://webapp:3000/img/custom/logo-squared.svg">
        </div>
      </header>
      <h2>Hallo Jenny Rostock,</h2>
      <div class="wrapper">
        <div class="content"></div>
        <p>du wurdest aus der Gruppe „The Group“ entfernt.</p>
        <div class="text-block">
          <p>Bis bald bei <a class="organization" href="https://ocelot.social">ocelot.social</a>!</p>
          <p>– Dein ocelot.social Team</p><br>
          <p>PS: Möchtest du keine E-Mails mehr erhalten, dann ändere deine <a class="settings" href="http://webapp:3000/settings/notifications">Benachrichtigungseinstellungen</a>!</p>
        </div>
      </div>
      <footer>
        <div class="footer"></div><a href="https://ocelot.social">ocelot.social Community</a>
      </footer>
    </div>
  </body>
</html>",
  "subject": "ocelot.social  – Benachrichtigung: Aus Gruppe entfernt",
  "text": "HALLO JENNY ROSTOCK,

du wurdest aus der Gruppe „The Group“ entfernt.

Bis bald bei ocelot.social [https://ocelot.social]!

– Dein ocelot.social Team


PS: Möchtest du keine E-Mails mehr erhalten, dann ändere deine
Benachrichtigungseinstellungen [http://webapp:3000/settings/notifications]!


ocelot.social Community [https://ocelot.social]",
  "to": "user@example.org",
}
`;

exports[`sendEmail German user_joined_group template 1`] = `
{
  "attachments": [],
  "from": "ocelot.social",
  "html": "<!DOCTYPE html>
<html lang="de">
  <head>
    <meta content="multipart/html; charset=UTF-8" http-equiv="content-type">
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <style>.wf-force-outline-none[tabindex="-1"]:focus{outline:none;}</style>
    <style>body{
  display: block;
  font-family: Lato, sans-serif;
  font-size: 17px;
  text-align: left;
  text-align: -webkit-left;
  justify-content: center;
  padding: 15px;
  margin: 0px;
}

h2 {
  margin-top: 25px;
  font-size: 25px;
  font-weight: normal;
  line-height: 22px;
  color: #333333;
}

.container {
  max-width: 680px;
  margin: 0 auto;
  display: block;
}

.head-logo {
  width: 60%;
  height: auto;
  display: block;
  margin-left: auto;
  margin-right: auto;
}

a {
  color: #17b53e;
}

a.button {
  background: #17b53e;
  font-family: Lato, sans-serif;
  font-size: 16px;
  line-height: 15px;
  text-decoration: none;
  text-align:center;
  padding: 13px 17px;
  color: #ffffff;
  display: table;
  margin-left: auto;
  margin-right: auto;
  border-radius: 4px;
}

.text-block {
  margin-top: 20px;
  color: #000000;
}

footer {
  padding: 20px;
  font-family: Lato, sans-serif;
  font-size: 12px;
  line-height: 15px;
  text-align: center;
  color: #888888;
}

    </style>
  </head>
  <body>
    <div class="container">
      <header>
        <div class="head"><img class="head-logo" alt="Welcome Image" loading="lazy" src="http://webapp:3000/img/custom/logo-squared.svg">
        </div>
      </header>
      <h2>Hallo Jenny Rostock,</h2>
      <div class="wrapper">
        <div class="content"></div>
        <p><a class="user" href="http://webapp:3000/user/u2/peter-lustig">Peter Lustig</a> ist der Gruppe „The Group“ beigetreten. Klicke auf diesen Knopf, um diese Gruppe zu sehen:
        </p><a class="button" href="http://webapp:3000/group/g1/the-group">Gruppe ansehen</a>
        <div class="text-block">
          <p>Bis bald bei <a class="organization" href="https://ocelot.social">ocelot.social</a>!</p>
          <p>– Dein ocelot.social Team</p><br>
          <p>PS: Möchtest du keine E-Mails mehr erhalten, dann ändere deine <a class="settings" href="http://webapp:3000/settings/notifications">Benachrichtigungseinstellungen</a>!</p>
        </div>
      </div>
      <footer>
        <div class="footer"></div><a href="https://ocelot.social">ocelot.social Community</a>
      </footer>
    </div>
  </body>
</html>",
  "subject": "ocelot.social  – Benachrichtigung: Nutzer tritt Gruppe bei",
  "text": "HALLO JENNY ROSTOCK,

Peter Lustig [http://webapp:3000/user/u2/peter-lustig] ist der Gruppe „The
Group“ beigetreten. Klicke auf diesen Knopf, um diese Gruppe zu sehen:

Gruppe ansehen [http://webapp:3000/group/g1/the-group]

Bis bald bei ocelot.social [https://ocelot.social]!

– Dein ocelot.social Team


PS: Möchtest du keine E-Mails mehr erhalten, dann ändere deine
Benachrichtigungseinstellungen [http://webapp:3000/settings/notifications]!


ocelot.social Community [https://ocelot.social]",
  "to": "user@example.org",
}
`;

exports[`sendEmail German user_left_group template 1`] = `
{
  "attachments": [],
  "from": "ocelot.social",
  "html": "<!DOCTYPE html>
<html lang="de">
  <head>
    <meta content="multipart/html; charset=UTF-8" http-equiv="content-type">
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <style>.wf-force-outline-none[tabindex="-1"]:focus{outline:none;}</style>
    <style>body{
  display: block;
  font-family: Lato, sans-serif;
  font-size: 17px;
  text-align: left;
  text-align: -webkit-left;
  justify-content: center;
  padding: 15px;
  margin: 0px;
}

h2 {
  margin-top: 25px;
  font-size: 25px;
  font-weight: normal;
  line-height: 22px;
  color: #333333;
}

.container {
  max-width: 680px;
  margin: 0 auto;
  display: block;
}

.head-logo {
  width: 60%;
  height: auto;
  display: block;
  margin-left: auto;
  margin-right: auto;
}

a {
  color: #17b53e;
}

a.button {
  background: #17b53e;
  font-family: Lato, sans-serif;
  font-size: 16px;
  line-height: 15px;
  text-decoration: none;
  text-align:center;
  padding: 13px 17px;
  color: #ffffff;
  display: table;
  margin-left: auto;
  margin-right: auto;
  border-radius: 4px;
}

.text-block {
  margin-top: 20px;
  color: #000000;
}

footer {
  padding: 20px;
  font-family: Lato, sans-serif;
  font-size: 12px;
  line-height: 15px;
  text-align: center;
  color: #888888;
}

    </style>
  </head>
  <body>
    <div class="container">
      <header>
        <div class="head"><img class="head-logo" alt="Welcome Image" loading="lazy" src="http://webapp:3000/img/custom/logo-squared.svg">
        </div>
      </header>
      <h2>Hallo Jenny Rostock,</h2>
      <div class="wrapper">
        <div class="content"></div>
        <p><a class="user" href="http://webapp:3000/user/u2/peter-lustig">Peter Lustig</a> hat die Gruppe „The Group“ verlassen. Klicke auf diesen Knopf, um diese Gruppe zu sehen:
        </p><a class="button" href="http://webapp:3000/group/g1/the-group">Gruppe ansehen</a>
        <div class="text-block">
          <p>Bis bald bei <a class="organization" href="https://ocelot.social">ocelot.social</a>!</p>
          <p>– Dein ocelot.social Team</p><br>
          <p>PS: Möchtest du keine E-Mails mehr erhalten, dann ändere deine <a class="settings" href="http://webapp:3000/settings/notifications">Benachrichtigungseinstellungen</a>!</p>
        </div>
      </div>
      <footer>
        <div class="footer"></div><a href="https://ocelot.social">ocelot.social Community</a>
      </footer>
    </div>
  </body>
</html>",
  "subject": "ocelot.social  – Benachrichtigung: Nutzer verlässt Gruppe",
  "text": "HALLO JENNY ROSTOCK,

Peter Lustig [http://webapp:3000/user/u2/peter-lustig] hat die Gruppe „The
Group“ verlassen. Klicke auf diesen Knopf, um diese Gruppe zu sehen:

Gruppe ansehen [http://webapp:3000/group/g1/the-group]

Bis bald bei ocelot.social [https://ocelot.social]!

– Dein ocelot.social Team


PS: Möchtest du keine E-Mails mehr erhalten, dann ändere deine
Benachrichtigungseinstellungen [http://webapp:3000/settings/notifications]!


ocelot.social Community [https://ocelot.social]",
  "to": "user@example.org",
}
`;
